--- a/Schnitzel/index.html
+++ b/Schnitzel/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="script" href="script.js">
     <title>Document</title>
   </head>
   <body><header> <h1>Willkommen zur digitalen Schnitzeljagd!</h1> </header> <main> <section id="intro"> <p>Scanne den QR-Code und folge den Hinweisen, um die wichtigsten Orte im Schulhaus zu entdecken.</p> <buttononclick="startHunt()">Starte die Schnitzeljagd</button> </section> <section id="task" class="hidden"> <h2id="location-name"></h2> <p id="description"></p> <input type="text" id="answer" placeholder="Ihre Antwort"><button onclick="checkAnswer()">Antworten</button> </section> <section id="result" class="hidden"> <p id="result-message"></p> <button onclick="nextTask()">Weiter</button> </section> <section id="completion" class="hidden"><h2>Glückwunsch!</h2> <p>Sie haben die Schnitzeljagd erfolgreich abgeschlossen und die wichtigsten Orte im Schulhaus kennengelernt.</p> </section> </main></body>
